--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <h1 class="hero-name">Mahdiar Khodabakhshi</h1>
                     <h2 class="hero-title">ML Engineer @ Ross Video</h2>
                     <p class="hero-description">
-                        With a strong background in software engineering, technical leadership, and product innovation, 
+                        With a strong background in Software Engineering, Machine Learning, and product innovation, 
                         I excel at turning complex challenges into scalable, high-impact solutions—always staying ahead 
                         by leveraging the latest technologies and best practices.
                     </p>
@@ -261,30 +261,29 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-icon">🏆</div>
-                    <h3 class="project-title">Humanform.ai</h3>
+                    <h3 class="project-title">DyCoT-TAGLM</h3>
                     <p class="project-description">
-                        Building human clones, and the next generation AI Identity Layer.
+                        Improving SPARQL Query Generation with Triple-Augmented Generative Models via Dynamic Chain-of-Thought Prompting
                     </p>
-                    <a href="#" class="project-link">Check project →</a>
+                    <a href="https://github.com/MahdiarKhodabakhshi/DyCoT-TAGLM" class="project-link">Check project →</a>
                 </div>
 
                 <div class="project-card">
                     <div class="project-icon">🏆</div>
-                    <h3 class="project-title">Plural.com</h3>
+                    <h3 class="project-title">BioFactQA</h3>
                     <p class="project-description">
-                        Leading a world class team of engineers on a mission to create one billion jobs.
+                        Evaluation framework for assessing the performance of Llama3-ChatQA-8B in biomedical factoid question answering. Includes data preprocessing, answer generation, validation, and performance evaluation using MRR and accuracy metrics.
                     </p>
-                    <a href="#" class="project-link">Check project →</a>
+                    <a href="https://github.com/MahdiarKhodabakhshi/BioFactQA-NLP" class="project-link">Check project →</a>
                 </div>
 
                 <div class="project-card">
                     <div class="project-icon">🏆</div>
-                    <h3 class="project-title">apple-signin-auth (Opensource)</h3>
+                    <h3 class="project-title">Layer by Layer, Step by Step</h3>
                     <p class="project-description">
-                        Built and maintaining the open source defacto standard for Apple Signin/Authentication for NodeJS. 
-                        Downloaded over 3 Million times; if you used apple signin, you used this library.
+                        This repository provides a Layer-by-Layer MTEB evaluation style: treat each transformer block's hidden state as an embedding, evaluate all layers across the 32 MTEB tasks used in the paper, and store per-task, per-layer artifacts.
                     </p>
-                    <a href="#" class="project-link">Check project →</a>
+                    <a href="https://github.com/MahdiarKhodabakhshi/layerwise-checkpoint-search" class="project-link">Check project →</a>
                 </div>
 
                 <!-- <div class="project-card">
@@ -310,14 +309,14 @@
                 <h2 class="section-title">Academic Background</h2>
             </div>
             <div class="academia-list">
-                <div class="academia-item">- B.Eng. in Computer Science at the University of Passau, Germany</div>
-                <div class="academia-item">- B.Sc. in Computer and Electrical Engineering at the German University in Cairo</div>
+                <div class="academia-item">- B.Eng. in Computer Engineering at Toronto Metropolitan University, Canada</div>
+                <div class="academia-item">- Minor in Applied Mathematics at Toronto Metropolitan University, Canada</div>
             </div>
         </div>
     </section>
 
     <!-- News Section -->
-    <section class="news" id="news">
+    <!-- <section class="news" id="news">
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">News</h2>
@@ -372,10 +371,10 @@
                 </article>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Contact Section -->
-    <section class="contact" id="contact">
+    <!-- <section class="contact" id="contact">
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">Let's Connect</h2>
@@ -392,7 +391,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Footer -->
     <footer class="footer">
