Adding Contact Section

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
     </section>
 
     <!-- News Section -->
-    <!-- <section class="news" id="news">
+    <section class="news" id="news">
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">News</h2>
@@ -371,10 +371,10 @@
                 </article>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- Contact Section -->
-    <!-- <section class="contact" id="contact">
+    <section class="contact" id="contact">
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">Let's Connect</h2>
@@ -383,15 +383,15 @@
                 <p class="contact-text">
                     Explore my projects and read my articles to see my work in action. Feel free to contact me 
                     to discuss potential collaborations or to learn more about my experience and skills. 
-                    Check out my <a href="#" class="text-link">portfolio</a> or <a href="#" class="text-link">book a call</a>.
+                    Check out my <a href="https://mahdiarkhodabakhshi.github.io/" class="text-link">portfolio</a> or <a href="https://cal.com/mahdiar" class="text-link">book a call</a>.
                 </p>
                 <div class="contact-actions">
-                    <a href="mailto:contact@ahmedtokyo.com" class="btn btn-primary">Get In Touch</a>
-                    <a href="#" class="btn btn-secondary">Book a Call</a>
+                    <a href="mailto:mahdiar.edu@gmail.com" class="btn btn-primary">Get In Touch</a>
+                    <a href="https://cal.com/mahdiar" class="btn btn-secondary">Book a Call</a>
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- Footer -->
     <footer class="footer">
