Fix resume download logic

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             </svg>
                             <span>Github</span>
                         </a>
-                        <a href="#" class="contact-item" download aria-label="Download Resume">
+                        <a href="mahdiar_khodabakhshi_resume_2026.pdf" class="contact-item" id="downloadResume" aria-label="Download Resume">
                             <svg class="contact-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
                                 <polyline points="7 10 12 15 17 10"></polyline>
@@ -80,7 +80,7 @@
                 </div>
                 <div class="hero-text">
                     <h1 class="hero-name">Mahdiar Khodabakhshi</h1>
-                    <h2 class="hero-title">ML Engineer @ Ross Video</h2>
+                    <h2 class="hero-title">Machine Learning Engineer/Researcher</h2>
                     <p class="hero-description">
                         With a strong background in Software Engineering, Machine Learning, and product innovation, 
                         I excel at turning complex challenges into scalable, high-impact solutions—always staying ahead 
@@ -94,7 +94,7 @@
                     </div>
                     <div class="hero-actions">
                         <a href="#contact" class="btn btn-primary">Contact Me</a>
-                        <a href="#" class="btn btn-secondary">View Resume</a>
+                        <a href="mahdiar_khodabakhshi_resume_2026.pdf" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">View Resume</a>
                         <!-- <button class="btn-icon" id="moreBtn" aria-label="More information">+ more</button> -->
                     </div>
                 </div>
