--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
                 <div class="hero-text">
                     <h1 class="hero-name">Mahdiar Khodabakhshi</h1>
-                    <h2 class="hero-title">Machine Learning Engineer/Researcher</h2>
+                    <h2 class="hero-title">Machine Learning Engineer</h2>
                     <p class="hero-description">
                         With a strong background in Software Engineering, Machine Learning, and product innovation, 
                         I excel at turning complex challenges into scalable, high-impact solutions—always staying ahead 
@@ -396,7 +396,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Mahdiar Khodabakhshi. All rights reserved.</p>
+            <p>&copy; 2026 Mahdiar Khodabakhshi. All rights reserved.</p>
         </div>
     </footer>
 
