Adding News and refining title

--- a/index.html
+++ b/index.html
@@ -82,14 +82,16 @@
                     <h1 class="hero-name">Mahdiar Khodabakhshi</h1>
                     <h2 class="hero-title">Machine Learning Engineer</h2>
                     <p class="hero-description">
-                        With a strong background in Software Engineering, Machine Learning, and product innovation, 
-                        I excel at turning complex challenges into scalable, high-impact solutions—always staying ahead 
-                        by leveraging the latest technologies and best practices.
+                        I am a Researcher and Engineer in Natural Language Processing, Information Retrieval, and Generative AI, focused on building production ready LLM systems. My background is in Software Engineering and applied machine learning, with an emphasis on scalable retrieval, evaluation, and deployment for real world applications.
+                        </p>
+                    <p class="hero-description">
+                        My work focuses on two main directions. The first is Retrieval-Augmented Generation (RAG) and hybrid search, where I design and optimize end-to-end retrieval pipelines to make LLM outputs more grounded, accurate, and useful. The second is agentic GenAI systems and LLMOps, where I build tool using agents and the supporting infrastructure required for production: LLM deployment and configuration, CI/CD, monitoring/observability, reliability evaluation, and cost/latency optimization, often across Python/TypeScript and cloud-native environments.
                     </p>
                     <div class="hero-tags">
                         <span class="tag">Founder</span>
                         <span class="tag">NLP Researcher</span>
                         <span class="tag">Machine Learning Engineer</span>
+                        <span class="tag">Agentic Systems</span>
                         <span class="tag">Software Engineer</span>
                     </div>
                     <div class="hero-actions">
@@ -324,41 +326,39 @@
             <div class="news-list">
                 <article class="news-item">
                     <div class="news-header">
-                        <h3 class="news-title">Latest Publication on NLP Research</h3>
-                        <span class="news-date">January 2024</span>
+                        <h3 class="news-title">First-Author Journal Manuscript Submitted to IPM2026</h3>
+                        <span class="news-date">January 2026</span>
                     </div>
                     <p class="news-description">
-                        Published research findings on advanced natural language processing techniques 
-                        in leading AI conference proceedings.
+                        Submitted a first-author journal manuscript on prompting and retrieval-augmented generation
+                        techniques to improve LLM performance on SPARQL query generation.
                     </p>
-                    <a href="#" class="news-link">Read more →</a>
                 </article>
 
                 <article class="news-item">
                     <div class="news-header">
-                        <h3 class="news-title">Conference Presentation at ICML 2024</h3>
-                        <span class="news-date">December 2023</span>
+                        <h3 class="news-title">Invited Research Talk at RISE Germany (Heidelberg)</h3>
+                        <span class="news-date">January 2026</span>
                     </div>
                     <p class="news-description">
-                        Presented innovative machine learning methodologies at the International Conference 
-                        on Machine Learning, sharing insights with the global research community.
+                        Invited to the RISE Germany meeting in Heidelberg to represent the University of Paderborn as a
+                        research intern, presenting work on translating natural-language questions (NLQ) into
+                        first-order logic (FOL) queries.
                     </p>
-                    <a href="#" class="news-link">Read more →</a>
                 </article>
 
                 <article class="news-item">
                     <div class="news-header">
-                        <h3 class="news-title">Open Source Contribution Recognition</h3>
-                        <span class="news-date">November 2023</span>
+                        <h3 class="news-title">Meetra Wins Top Student Implementation Award</h3>
+                        <span class="news-date">Sep 2025</span>
                     </div>
                     <p class="news-description">
-                        Recognized for significant contributions to open-source AI and machine learning 
-                        projects, contributing to the advancement of the developer community.
+                        Meetra was recognized as the Top Student Implementation at the Norman Esch Engineering
+                        Innovation and Entrepreneurship Awards for building an intelligent networking system.
                     </p>
-                    <a href="#" class="news-link">Read more →</a>
                 </article>
 
-                <article class="news-item">
+                <!-- <article class="news-item">
                     <div class="news-header">
                         <h3 class="news-title">New Research Collaboration Initiative</h3>
                         <span class="news-date">October 2023</span>
@@ -367,8 +367,7 @@
                         Launched collaborative research initiative focusing on scalable AI systems 
                         and their applications in real-world scenarios.
                     </p>
-                    <a href="#" class="news-link">Read more →</a>
-                </article>
+                </article> -->
             </div>
         </div>
     </section>
