Updating Experience Section

--- a/index.html
+++ b/index.html
@@ -122,12 +122,10 @@
                                 </div>
                             </div>
                         </div>
-                        <span class="experience-period">2024 - Present</span>
+                        <span class="experience-period">Sep 2024 - Present</span>
                     </div>
                     <p class="experience-description">
-                        Leading the technical vision and strategy for Humanform.ai, building human clones and the next generation AI Identity Layer. 
-                        Architecting scalable systems that enable AI-powered identity solutions, managing cross-functional engineering teams, 
-                        and driving innovation in AI and machine learning technologies.
+                        I'm working on efficient evaluation and inference for foundation models. Built a resumable benchmarking pipeline for layer-wise embeddings and using a contextual bandit (LinUCB) to rapidly identify strong checkpoint/layer configurations, while also exploring token level inference optimizations to reduce latency with minimal quality loss.
                     </p>
                 </div>
 
@@ -142,12 +140,10 @@
                                 </div>
                             </div>
                         </div>
-                        <span class="experience-period">2023 - 2024</span>
+                        <span class="experience-period">Dec 2025 - Present</span>
                     </div>
                     <p class="experience-description">
-                        Leading a world-class team of engineers on a mission to create one billion jobs through innovative technology solutions. 
-                        Overseeing product development, technical architecture, and engineering operations to deliver scalable platforms that 
-                        transform how people connect with work opportunities globally.
+                        I’m developing a framework for self explainable link prediction on knowledge graphs that pushes beyond binary “link exists” classification toward entity ranking predictions while avoiding leakage from textual attributes. The project focuses on retrieving relevant subgraphs for static KGs, producing better calibrated scores over candidate entities, and defining clear, user aligned explanation formats and metrics so LLMs can justify link predictions in a structured, evaluable way.
                     </p>
                 </div>
 
@@ -162,12 +158,27 @@
                                 </div>
                             </div>
                         </div>
-                        <span class="experience-period">2022 - 2023</span>
+                        <span class="experience-period">Sep 2025 - Present</span>
                     </div>
                     <p class="experience-description">
-                        Spearheaded development of high-performance web applications and APIs, mentoring engineering teams and establishing 
-                        best practices for code quality and system architecture. Delivered robust, scalable solutions that improved platform 
-                        performance and user experience significantly.
+                        I work on building production grade GenAI search and automation systems combining RAG pipelines, hybrid retrieval and re-ranking, and agentic workflows that integrate LLMs with internal data sources and services. My responsibilities span the full lifecycle: designing retrieval architectures, grounding and evaluation strategies, and engineering the deployment/operations layer.
+                </div>
+
+                <div class="experience-item">
+                    <div class="experience-header">
+                        <div class="experience-title-company">
+                            <div class="experience-company-header">
+                                <img src="images/tmu-logo.png" alt="tmu" class="company-logo">
+                                <div>
+                                    <h3 class="experience-title">Machine Learning Researcher</h3>
+                                    <p class="experience-company">Toronto Metropolitan University</p>
+                                </div>
+                            </div>
+                        </div>
+                        <span class="experience-period">May 2024 - Sep 2025</span>
+                    </div>
+                    <p class="experience-description">
+                        At Toronto Metropolitan University, I focus on knowledge grounded RAG over knowledge graphs designing multi-hop KG retrieval and hybrid reranking pipelines, and training LLMs/SLMs to reliably generate structured queries (text-to-SPARQL). Overall, I’m responsible for the end-to-end research loop: retriever/reranker design and model fine-tuning to improve grounded reasoning and retrieval quality.
                     </p>
                 </div>
 
@@ -188,26 +199,6 @@
                         Developed and maintained full-stack applications using modern web technologies, collaborating with cross-functional 
                         teams to deliver features that enhanced user engagement and business metrics. Contributed to system design decisions 
                         and implemented best practices for code maintainability and scalability.
-                    </p>
-                </div>
-
-                <div class="experience-item">
-                    <div class="experience-header">
-                        <div class="experience-title-company">
-                            <div class="experience-company-header">
-                                <img src="images/tmu-logo.png" alt="tmu" class="company-logo">
-                                <div>
-                                    <h3 class="experience-title">Machine Learning Researcher</h3>
-                                    <p class="experience-company">Toronto Metropolitan University</p>
-                                </div>
-                            </div>
-                        </div>
-                        <span class="experience-period">2020 - 2021</span>
-                    </div>
-                    <p class="experience-description">
-                        Built scalable backend systems and APIs, working with cloud infrastructure and modern development frameworks. 
-                        Implemented features that supported business growth and improved system reliability through comprehensive testing 
-                        and monitoring practices.
                     </p>
                 </div>
 
