--- a/index.html
+++ b/index.html
@@ -193,12 +193,10 @@
                                 </div>
                             </div>
                         </div>
-                        <span class="experience-period">2021 - 2022</span>
+                        <span class="experience-period">May 2025 - Sep 2025</span>
                     </div>
                     <p class="experience-description">
-                        Developed and maintained full-stack applications using modern web technologies, collaborating with cross-functional 
-                        teams to deliver features that enhanced user engagement and business metrics. Contributed to system design decisions 
-                        and implemented best practices for code maintainability and scalability.
+                        I combined hands-on data analysis with lightweight product engineering to make program data usable day-to-day: I took raw operational datasets, cleaned and standardized them into consistent KPI tables, automated recurring analyses, and packaged the results into an internal workflow where stakeholders could query and explore metrics via a small web interface, rather than relying on spreadsheets and manual reporting.
                     </p>
                 </div>
 
@@ -213,12 +211,10 @@
                                 </div>
                             </div>
                         </div>
-                        <span class="experience-period">2019 - 2020</span>
+                        <span class="experience-period">May 2024 - Feb 2025</span>
                     </div>
                     <p class="experience-description">
-                        Conducted research in computer science and artificial intelligence, contributing to academic publications and 
-                        research projects. Developed algorithms and prototypes, collaborated with faculty on cutting-edge research initiatives, 
-                        and presented findings at academic conferences.
+                        I built an end-to-end RAG-based security assistant that turns user inputs into grounded, tailored security recommendations by retrieving from internal knowledge and generating responses with clear context. I also owned the quality and reliability loop setting up evaluation workflows and dataset/ETL pipelines to measure accuracy and iterate quickly and engineered the Azure-based deployment infrastructure to run these workflows securely at scale while cutting serving latency by about 20%.
                     </p>
                 </div>
 
@@ -253,40 +249,66 @@
             </div>
             <div class="projects-grid">
                 <div class="project-card">
-                    <div class="project-icon">🏆</div>
-                    <h3 class="project-title">DyCoT-TAGLM</h3>
+                    <div class="project-header">
+                        <h3 class="project-title">DyCoT-TAGLM</h3>
+                        <a href="https://github.com/MahdiarKhodabakhshi/DyCoT-TAGLM" class="project-link">GitHub →</a>
+                    </div>
                     <p class="project-description">
-                        Improving SPARQL Query Generation with Triple-Augmented Generative Models via Dynamic Chain-of-Thought Prompting
+                        Triple-augmented generative modeling for SPARQL query generation, using dynamic chain-of-thought
+                        prompting to improve reasoning and execution accuracy.
                     </p>
-                    <a href="https://github.com/MahdiarKhodabakhshi/DyCoT-TAGLM" class="project-link">Check project →</a>
+                    <div class="project-tags">
+                        <span class="project-tag">SPARQL</span>
+                        <span class="project-tag">RAG</span>
+                        <span class="project-tag">Prompting</span>
+                    </div>
                 </div>
 
                 <div class="project-card">
-                    <div class="project-icon">🏆</div>
-                    <h3 class="project-title">BioFactQA</h3>
+                    <div class="project-header">
+                        <h3 class="project-title">BioFactQA</h3>
+                        <a href="https://github.com/MahdiarKhodabakhshi/BioFactQA-NLP" class="project-link">GitHub →</a>
+                    </div>
                     <p class="project-description">
-                        Evaluation framework for assessing the performance of Llama3-ChatQA-8B in biomedical factoid question answering. Includes data preprocessing, answer generation, validation, and performance evaluation using MRR and accuracy metrics.
+                        Evaluation framework for biomedical factoid QA with Llama3-ChatQA-8B, covering preprocessing,
+                        answer generation, validation, and metrics such as MRR and accuracy.
                     </p>
-                    <a href="https://github.com/MahdiarKhodabakhshi/BioFactQA-NLP" class="project-link">Check project →</a>
+                    <div class="project-tags">
+                        <span class="project-tag">Biomedical QA</span>
+                        <span class="project-tag">Evaluation</span>
+                        <span class="project-tag">Llama 3</span>
+                    </div>
                 </div>
 
                 <div class="project-card">
-                    <div class="project-icon">🏆</div>
-                    <h3 class="project-title">Layer by Layer, Step by Step</h3>
+                    <div class="project-header">
+                        <h3 class="project-title">Layer by Layer, Step by Step</h3>
+                        <a href="https://github.com/MahdiarKhodabakhshi/layerwise-checkpoint-search" class="project-link">GitHub →</a>
+                    </div>
                     <p class="project-description">
-                        This repository provides a Layer-by-Layer MTEB evaluation style: treat each transformer block's hidden state as an embedding, evaluate all layers across the 32 MTEB tasks used in the paper, and store per-task, per-layer artifacts.
+                        Layer-wise MTEB evaluation: treat each transformer block's hidden state as an embedding, score
+                        all layers across the 32 MTEB tasks, and store per-task, per-layer artifacts.
                     </p>
-                    <a href="https://github.com/MahdiarKhodabakhshi/layerwise-checkpoint-search" class="project-link">Check project →</a>
+                    <div class="project-tags">
+                        <span class="project-tag">MTEB</span>
+                        <span class="project-tag">Embeddings</span>
+                        <span class="project-tag">Benchmarking</span>
+                    </div>
                 </div>
 
                 <!-- <div class="project-card">
-                    <div class="project-icon">🏆</div>
-                    <h3 class="project-title">Audify AI (Web)</h3>
+                    <div class="project-header">
+                        <h3 class="project-title">Audify AI (Web)</h3>
+                        <a href="#" class="project-link">GitHub →</a>
+                    </div>
                     <p class="project-description">
-                        Built a fully automated service allowing users to utilize the power of AI and Text to Speech 
-                        by creating Podcasts, Audiobooks, Voiceovers and more.
+                        Built a fully automated service allowing users to utilize the power of AI and Text to Speech
+                        by creating podcasts, audiobooks, voiceovers, and more.
                     </p>
-                    <a href="#" class="project-link">Check project →</a>
+                    <div class="project-tags">
+                        <span class="project-tag">Text to Speech</span>
+                        <span class="project-tag">Automation</span>
+                    </div>
                 </div> -->
             </div>
             <!-- <div class="portfolio-cta">
