--- a/index.html
+++ b/index.html
@@ -250,17 +250,39 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-header">
+                        <h3 class="project-title">Meetra</h3>
+                        <a href="https://github.com/MahdiarKhodabakhshi/Meetra" class="project-link">GitHub →</a>
+                    </div>
+                    <p class="project-description">
+                        Goal-oriented networking platform (raised $13K) that matches event attendees with high-fit
+                        connections. Built an agentic pipeline that structures profiles into role-skill embeddings,
+                        then retrieves and re-ranks matches in real time. Delivered the full-stack product in Next.js
+                        with PostgreSQL, Redis caching, and Docker Compose deployment.
+                    </p>
+                    <div class="project-tags">
+                        <span class="project-tag">Semantic Search</span>
+                        <span class="project-tag">Embeddings</span>
+                        <span class="project-tag">Next.js</span>
+                        <span class="project-tag">PostgreSQL</span>
+                        <span class="project-tag">Docker</span>
+                        <span class="project-tag">Agentic Systems</span>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-header">
                         <h3 class="project-title">DyCoT-TAGLM</h3>
                         <a href="https://github.com/MahdiarKhodabakhshi/DyCoT-TAGLM" class="project-link">GitHub →</a>
                     </div>
                     <p class="project-description">
-                        Triple-augmented generative modeling for SPARQL query generation, using dynamic chain-of-thought
-                        prompting to improve reasoning and execution accuracy.
+                        A dynamic reasoning framework for text-to-SPARQL that couples a triple-augmented language model with dynamic Chain-of-Thought prompting and a Hybrid Example Search combining semantic and SPARQL-structural similarity to retrieve exemplars and refine queries for robust generation.
                     </p>
                     <div class="project-tags">
-                        <span class="project-tag">SPARQL</span>
-                        <span class="project-tag">RAG</span>
-                        <span class="project-tag">Prompting</span>
+                        <span class="project-tag">Knowledge Graphs</span>
+                        <span class="project-tag">Retrieval-Augmented Generation</span>
+                        <span class="project-tag">LLM Prompting</span>
+                        <span class="project-tag">fine-tuning</span>
+                        <span class="project-tag">Chain-of-Thought</span>
                     </div>
                 </div>
 
@@ -274,9 +296,10 @@
                         answer generation, validation, and metrics such as MRR and accuracy.
                     </p>
                     <div class="project-tags">
-                        <span class="project-tag">Biomedical QA</span>
-                        <span class="project-tag">Evaluation</span>
-                        <span class="project-tag">Llama 3</span>
+                        <span class="project-tag">Biomedical NLP</span>
+                        <span class="project-tag">LLM Question Answering</span>
+                        <span class="project-tag">Evaluation Metrics</span>
+                        <span class="project-tag">Llama3-ChatQA-8B</span>
                     </div>
                 </div>
 
@@ -290,9 +313,9 @@
                         all layers across the 32 MTEB tasks, and store per-task, per-layer artifacts.
                     </p>
                     <div class="project-tags">
-                        <span class="project-tag">MTEB</span>
-                        <span class="project-tag">Embeddings</span>
-                        <span class="project-tag">Benchmarking</span>
+                        <span class="project-tag">Embedding Evaluation</span>
+                        <span class="project-tag">Training</span>
+                        <span class="project-tag">MLOps</span>
                     </div>
                 </div>
 
