Adding SEO practices

--- a/index.html
+++ b/index.html
@@ -3,9 +3,47 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
+        <meta name="description" content="Mahdiar Khodabakhshi - Machine Learning Engineer and NLP researcher. Projects, research, and contact.">
+        <meta name="robots" content="index, follow">
+        <meta name="author" content="Mahdiar Khodabakhshi">
+        <link rel="canonical" href="https://mahdiarkhodabakhshi.github.io/">
+
         <title>Mahdiar Khodabakhshi - Portfolio</title>
-    
+
+        <meta property="og:title" content="Mahdiar Khodabakhshi - Portfolio">
+        <meta property="og:description" content="Machine Learning Engineer and NLP researcher. Projects, research, and contact.">
+        <meta property="og:url" content="https://mahdiarkhodabakhshi.github.io/">
+        <meta property="og:type" content="website">
+        <meta property="og:site_name" content="Mahdiar Khodabakhshi">
+        <meta property="og:image" content="https://mahdiarkhodabakhshi.github.io/images/portfolio-picture.png">
+
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="Mahdiar Khodabakhshi - Portfolio">
+        <meta name="twitter:description" content="Machine Learning Engineer and NLP researcher. Projects, research, and contact.">
+        <meta name="twitter:image" content="https://mahdiarkhodabakhshi.github.io/images/portfolio-picture.png">
+
+        <script type="application/ld+json">
+            {
+                "@context": "https://schema.org",
+                "@type": "Person",
+                "name": "Mahdiar Khodabakhshi",
+                "url": "https://mahdiarkhodabakhshi.github.io/",
+                "image": "https://mahdiarkhodabakhshi.github.io/images/portfolio-picture.png",
+                "jobTitle": "Machine Learning Engineer",
+                "sameAs": [
+                    "https://www.linkedin.com/in/mahdiar-khodabakhshi/",
+                    "https://github.com/MahdiarKhodabakhshi"
+                ],
+                "knowsAbout": [
+                    "Natural Language Processing",
+                    "Information Retrieval",
+                    "Retrieval-Augmented Generation",
+                    "Large Language Models"
+                ]
+            }
+        </script>
+
         <!-- Favicons -->
         <link rel="icon" href="images/favicon.ico" sizes="any">
         <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32">
