--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="description" content="Mahdiar Khodabakhshi - Machine Learning Engineer and NLP researcher. Projects, research, and contact.">
         <meta name="robots" content="index, follow">
         <meta name="author" content="Mahdiar Khodabakhshi">
+        <meta name="msvalidate.01" content="9CB9BF03D3C8255ED2EE84BC13128C3F">
         <link rel="canonical" href="https://mahdiarkhodabakhshi.github.io/">
 
         <title>Mahdiar Khodabakhshi - Portfolio</title>
