--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             </svg>
                             <span>Github</span>
                         </a>
-                        <a href="mahdiar_khodabakhshi_resume_2026.pdf" class="contact-item" id="downloadResume" aria-label="Download Resume">
+                        <a href="mahdiar_khodabakhshi_resume_2026(Data_Science).pdf" class="contact-item" id="downloadResume" aria-label="Download Resume">
                             <svg class="contact-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
                                 <polyline points="7 10 12 15 17 10"></polyline>
@@ -135,7 +135,7 @@
                     </div>
                     <div class="hero-actions">
                         <a href="#contact" class="btn btn-primary">Contact Me</a>
-                        <a href="mahdiar_khodabakhshi_resume_2026.pdf" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">View Resume</a>
+                        <a href="mahdiar_khodabakhshi_resume_2026(Data_Science).pdf" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">View Resume</a>
                         <!-- <button class="btn-icon" id="moreBtn" aria-label="More information">+ more</button> -->
                     </div>
                 </div>
